--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
+		"@fontsource/montserrat-alternates": "^5.2.7",
+		"@fontsource/righteous": "^5.2.6",
 		"@types/sortablejs": "^1.15.8",
 		"idb": "^8.0.3",
 		"mupdf": "^1.26.4",
